--- a/portfolio.html
+++ b/portfolio.html
@@ -176,7 +176,7 @@
 
                 <div>
                     <div class="project-image-container mb-4">
-                        <img src="assets/Expense.jpeg" alt="Expense Tracker" class="project-image" />
+                        <img src="assets/expense.jpg" alt="Expense Tracker" class="project-image" />
                     </div>
                     <h3 class="text-xl font-semibold mb-2">Expense Tracker</h3>
                     <p class="text-gray-300 text-sm mb-4">
@@ -201,7 +201,7 @@
 
                 <div>
                     <div class="project-image-container mb-4">
-                        <img src="assets/waste.jpg" alt="Waste Classification using YOLO" class="project-image" />
+                        <img src="assets/wasteclass.jpg" alt="Waste Classification using YOLO" class="project-image" />
                     </div>
                     <h3 class="text-xl font-semibold mb-2">Waste Classification using YOLO</h3>
                     <p class="text-gray-300 text-sm mb-4">
