--- a/portfolio.html
+++ b/portfolio.html
@@ -192,7 +192,7 @@
                     </div>
                 </div>
 
-                <a href="#" class="text-teal-400 hover:underline text-sm mt-auto">View Project →</a>
+                <!-- <a href="#" class="text-teal-400 hover:underline text-sm mt-auto">View Project →</a> -->
             </div>
 
             <!-- Waste Classification using YOLO -->
@@ -218,7 +218,7 @@
                     </div>
                 </div>
 
-                <a href="#" class="text-teal-400 hover:underline text-sm mt-auto">View Project →</a>
+                <!-- <a href="#" class="text-teal-400 hover:underline text-sm mt-auto">View Project →</a> -->
             </div>
         </div>
     </section>
@@ -315,7 +315,7 @@
 
     <!-- Typewriter Effect -->
     <script>
-        const roles = ["Full Stack Developer", "Web Developer", "Front End Developer"];
+        const roles = ["Full Stack Developer", "Web Developer"];
         let roleIndex = 0;
         let charIndex = 0;
         const roleElement = document.getElementById("role");
