--- a/portfolio.html
+++ b/portfolio.html
@@ -133,6 +133,12 @@
                                 class="hover:underline hover:text-cyan-400 transition duration-200 cursor-pointer">Python</a>
                         </li>
                         <li class="flex items-center space-x-3">
+                            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/java/java-original.svg"
+                                class="w-6 h-6">
+                            <a href="https://dev.java/learn/" target="_blank"
+                                class="hover:underline hover:text-cyan-400 transition duration-200 cursor-pointer">JAVA</a>
+                        </li>
+                        <li class="flex items-center space-x-3">
                             <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/php/php-original.svg"
                                 class="w-6 h-6">
                             <a href="https://www.php.net/" target="_blank"
